update on retrieving data from database

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -403,56 +403,24 @@
                         </div>
                         <div class="widget-content">
                             <!-- post -->
+                             {% for i in popular_post|slice:"0:3" %}
                             <div class="post post-list-sm circle">
                                 <div class="thumb circle">
                                     <span class="number">1</span>
                                     <a href="blog-single.html">
                                         <div class="inner">
-                                            <img src="{% static 'images/posts/tabs-1.jpg'%}" alt="post-title" />
+                                            <img src="{{i.featured_image}}" alt="post-title" />
                                         </div>
                                     </a>
                                 </div>
                                 <div class="details clearfix">
-                                    <h6 class="post-title my-0"><a href="blog-single.html">3 Easy Ways To Make Your iPhone Faster</a></h6>
+                                    <h6 class="post-title my-0"><a href="blog-single.html">{{i.title|truncatechars:35}}</a></h6>
                                     <ul class="meta list-inline mt-1 mb-0">
-                                        <li class="list-inline-item">29 March 2021</li>
+                                        <li class="list-inline-item">{{i.date}}</li>
                                     </ul>
                                 </div>
                             </div>
-                            <!-- post -->
-                            <div class="post post-list-sm circle">
-                                <div class="thumb circle">
-                                    <span class="number">2</span>
-                                    <a href="blog-single.html">
-                                        <div class="inner">
-                                            <img src="{% static 'images/posts/tabs-2.jpg'%}" alt="post-title" />
-                                        </div>
-                                    </a>
-                                </div>
-                                <div class="details clearfix">
-                                    <h6 class="post-title my-0"><a href="blog-single.html">An Incredibly Easy Method That Works For All</a></h6>
-                                    <ul class="meta list-inline mt-1 mb-0">
-                                        <li class="list-inline-item">29 March 2021</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <!-- post -->
-                            <div class="post post-list-sm circle">
-                                <div class="thumb circle">
-                                    <span class="number">3</span>
-                                    <a href="blog-single.html">
-                                        <div class="inner">
-                                            <img src="{% static 'images/posts/tabs-3.jpg'%}" alt="post-title" />
-                                        </div>
-                                    </a>
-                                </div>
-                                <div class="details clearfix">
-                                    <h6 class="post-title my-0"><a href="blog-single.html">10 Ways To Immediately Start Selling Furniture</a></h6>
-                                    <ul class="meta list-inline mt-1 mb-0">
-                                        <li class="list-inline-item">29 March 2021</li>
-                                    </ul>
-                                </div>
-                            </div>
+                         {% endfor %}
                         </div>		
                     </div>
 
@@ -464,12 +432,9 @@
                         </div>
                         <div class="widget-content">
                             <ul class="list">
-                                <li><a href="#">Lifestyle</a><span>(5)</span></li>
-                                <li><a href="#">Inspiration</a><span>(2)</span></li>
-                                <li><a href="#">Fashion</a><span>(4)</span></li>
-                                <li><a href="#">Politic</a><span>(1)</span></li>
-                                <li><a href="#">Trending</a><span>(7)</span></li>
-                                <li><a href="#">Culture</a><span>(3)</span></li>
+                                {% for i in category %}
+                                <li><a href="#">{{i.name}}</a></li>
+                                {% endfor %}
                             </ul>
                         </div>
                         
